--- a/Implementierung/MusikschuleGui/SchuelerWindow.xaml
+++ b/Implementierung/MusikschuleGui/SchuelerWindow.xaml
@@ -23,8 +23,36 @@
                 <DataGridTextColumn Header="Telefon" Binding="{Binding Telefon}" Width="*"/>
             </DataGrid.Columns>
         </DataGrid>
-        
 
-        
+        <StackPanel Grid.Row="1" Margin="0,10,0,0" Orientation="Vertical">
+            <WrapPanel Margin="0,0,0,5">
+                <TextBlock Text="Vorname:" Width="80"/>
+                <TextBox x:Name="txtVorname" Width="150"/>
+                <TextBlock Text="Nachname:" Width="80" Margin="20,0,0,0"/>
+                <TextBox x:Name="txtNachname" Width="150"/>
+            </WrapPanel>
+
+            <WrapPanel Margin="0,0,0,5">
+                <TextBlock Text="Instrument:" Width="80"/>
+                <TextBox x:Name="txtInstrument" Width="150"/>
+                <TextBlock Text="E-Mail:" Width="80" Margin="20,0,0,0"/>
+                <TextBox x:Name="txtEmail" Width="150"/>
+            </WrapPanel>
+
+            <WrapPanel Margin="0,0,0,5">
+                <TextBlock Text="Telefon:" Width="80"/>
+                <TextBox x:Name="txtTelefon" Width="150"/>
+            </WrapPanel>
+
+            <WrapPanel Margin="0,5,0,0">
+                <Button Content="Neu" Width="80" />
+                <Button Content="Speichern" Width="80" Margin="10,0,0,0"/>
+                <Button Content="Löschen" Width="80" Margin="10,0,0,0"/>
+                <Button Content="Schließen" Width="80" Margin="10,0,0,0"/>
+            </WrapPanel>
+        </StackPanel>
+
+
+
     </Grid>
 </Window>
