--- a/Implementierung/MusikschuleGui/SchuelerWindow.xaml
+++ b/Implementierung/MusikschuleGui/SchuelerWindow.xaml
@@ -45,10 +45,10 @@
             </WrapPanel>
 
             <WrapPanel Margin="0,5,0,0">
-                <Button Content="Neu" Width="80" />
+                <Button Content="Neu" Width="80" Click="Neu_Click" />
                 <Button Content="Speichern" Width="80" Margin="10,0,0,0" Click="SpeicherButton_Click"/>
-                <Button Content="Löschen" Width="80" Margin="10,0,0,0"/>
-                <Button Content="Schließen" Width="80" Margin="10,0,0,0"/>
+                <Button Content="Löschen" Width="80" Margin="10,0,0,0" Click="Loeschen_Click"/>
+                <Button Content="Schließen" Width="80" Margin="10,0,0,0" Click="Schliessen_Click"/>
             </WrapPanel>
         </StackPanel>
 
