Restlichen Fenster hinzugefügt

--- a/Implementierung/MusikschuleGui/MainWindow.xaml
+++ b/Implementierung/MusikschuleGui/MainWindow.xaml
@@ -21,9 +21,9 @@
 
         <StackPanel Grid.Row="1" VerticalAlignment="Top" Width="250">
             <Button Content="Schüler verwalten" Margin="0,0,0,10" Click="SchuelerButton_Click"/>
-            <Button Content="Unterrichtsstunden planen" Margin="0,0,0,10"/>
-            <Button Content="Zahlungsübersicht" Margin="0,0,0,10"/>
-            <Button Content="Beenden"/>
+            <Button Content="Unterrichtsstunden planen" Margin="0,0,0,10" Click="Unterricht_Click"/>
+            <Button Content="Zahlungsübersicht" Margin="0,0,0,10" Click="Zahlungen_Click"/>
+            <Button Content="Beenden" Click="Close_Click"/>
         </StackPanel>
     </Grid>
 </Window>
