--- a/Implementierung/MusikschuleGui/UnterrichtWindow.xaml
+++ b/Implementierung/MusikschuleGui/UnterrichtWindow.xaml
@@ -75,10 +75,10 @@
             </WrapPanel>
 
             <WrapPanel Margin="0,5,0,0">
-                <Button Content="Neu" Width="80"/>
-                <Button Content="Speichern" Width="80" Margin="10,0,0,0"/>
-                <Button Content="Löschen" Width="80" Margin="10,0,0,0"/>
-                <Button Content="Schließen" Width="80" Margin="10,0,0,0"/>
+                <Button Content="Neu" Width="80" Click="Neu_Click"/>
+                <Button Content="Speichern" Width="80" Margin="10,0,0,0" Click="Speichern_Click"/>
+                <Button Content="Löschen" Width="80" Margin="10,0,0,0" Click="Loeschen_Click"/>
+                <Button Content="Schließen" Width="80" Margin="10,0,0,0" Click="Schliessen_Click"/>
             </WrapPanel>
         </StackPanel>
     </Grid>
