feat: NeuFormular und dgSelectionChanged

--- a/Implementierung/MusikschuleGui/UnterrichtWindow.xaml
+++ b/Implementierung/MusikschuleGui/UnterrichtWindow.xaml
@@ -14,6 +14,7 @@
 
         <DataGrid x:Name="dgStunden" Grid.Row="0" AutoGenerateColumns="False"
                   SelectionMode="Single"
+                  SelectionChanged="dgStunden_SelectionChanged"
                   Margin="0,0,0,10">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding UnterrichtsstundeId}" Width="50"/>
